# mashton_party_api

./: .eslintrc.js  .gitignore  Cargo.toml  startServer.sh  stopServer.sh
data/: Cargo.toml
data/src/: lib.rs
migrations/1-initial/: down.sh  down.sql  guests.js  reseed.sh  seed.js  up.sh  up.sql
src/: data.rs  main.rs
update/: Cargo.toml
update/src/: main.rs
update/src/assets/: app.js  main.css
