[package]
name = "data"
version = "0.1.0"
authors = ["Robert Masen <r@robertmasen.pizza>"]

[dependencies]
lazy_static = "1.0.2"
postgres = { version = "0.15.2", features = ["with-chrono", "with-uuid"] }
serde = "1.0.70"
serde_derive = "1.0.70"
toml = "0.4.6"
serde_json = "1.0.24"
chrono = { version = "0.4.4",features = ["serde"] }
env_logger = "0.5.11"
log = "0.4.3"
uuid = { version = "0.5", features = ["serde"] }